--- a/locales/de.json
+++ b/locales/de.json
@@ -368,21 +368,21 @@
       "add_to_cart": "In den Einkaufswagen legen",
       "view_options": "Optionen ansehen",
       "added": "Hinzugefügt",
-      "add": "Hinzufügen",
-      "loading": "Laden",
-      "choose": "Wählen",
+      "add": "Hinzufügen",  
+      "loading": "Laden", 
+      "choose": "Wählen", 
       "is_not_available": "ist nicht verfügbar",
       "quick_shop": "Schnellansicht",
       "tags": "Tags",
       "category": "Kategorie",
       "type": "Typ",
       "include_taxes": "inkl. MwSt.",
-      "shipping_policy_html": "zzgl. <a href=\"{{ link }}\">Versandkosten<\/a>",
+      "shipping_policy_html": "zzgl. <a href=\"{{ link }}\">Versandkosten</a>",
       "in_stock": "Auf Lager",
       "low_stock": "Weniger Lagerbestand",
       "out_of_stock": "Nicht auf Lager",
       "stock_left": "verblieben",
-      "out_of_stock_html": "Klicken Sie <a href=\"#\"><strong>hier<\/strong><\/a> um per Email benachrichtigt zu werden, wenn {{ product }} verfügbar wird.",
+      "out_of_stock_html": "Klicken Sie <a href=\"#\"><strong>hier</strong></a> um per Email benachrichtigt zu werden, wenn {{ product }} verfügbar wird.",
       "wrong_email": "Bitte geben Sie eine gültige Emailadresse an.",
       "out_of_stock_success": "Danke! Wir werden Sie benachrichtigen, wenn das Produkt verfügbar ist!",
       "read_more_html": "Mehr erfahren",
