--- a/locales/es.json
+++ b/locales/es.json
@@ -370,12 +370,12 @@
       "category": "Categoría",
       "type": "Género",
       "include_taxes": "Impuesto incluido.",
-      "shipping_policy_html": "Los <a href=\"{{ link }}\">gastos de envío</a> se calculan en la pantalla de pagos.",
+      "shipping_policy_html": "Los <a href=\"{{ link }}\">gastos de envío<\/a> se calculan en la pantalla de pagos.",
       "in_stock": "En stock",
       "low_stock": "Bajo stock",
       "out_of_stock": "Agotado",
       "stock_left": "restantes",
-      "out_of_stock_html": "Clique <a href=\"#\"><strong>here</strong></a> para notificarle por email cuando {{ product }} esté disponible.",
+      "out_of_stock_html": "Clique <a href=\"#\"><strong>here<\/strong><\/a> para notificarle por email cuando {{ product }} esté disponible.",
       "wrong_email": "Por favor, proporcione una dirección de email válida.",
       "out_of_stock_success": "¡Gracias!. Le notificaremos cuando este producto esté disponible",
       "read_more_html": "Más información",
