--- a/locales/fr.json
+++ b/locales/fr.json
@@ -370,12 +370,12 @@
       "category": "Catégorie",
       "type": "Sorte",
       "include_taxes": "Taxes incluses.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Frais d'expédition</a> calculés lors du passage à la caisse.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Frais d'expédition<\/a> calculés lors du passage à la caisse.",
       "in_stock": "En stock",
       "low_stock": "Stock faible",
       "out_of_stock": "En rupture de stock",
       "stock_left": "restant",
-      "out_of_stock_html": "Cliquez <a href=\"#\"><strong>ici</strong></a> pour être averti par email lorsque {{ product }} sera disponible.",
+      "out_of_stock_html": "Cliquez <a href=\"#\"><strong>ici<\/strong><\/a> pour être averti par email lorsque {{ product }} sera disponible.",
       "wrong_email": "Veuillez fournir une adresse email valide.",
       "out_of_stock_success": "Merci! Nous vous informerons lorsque ce produit sera disponible!",
       "read_more_html": "Lire la suite",
