--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -370,12 +370,12 @@
       "category": "Categoria",
       "type": "Tipo",
       "include_taxes": "Imposto incluído.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Envio</a> calculado na finalização da compra.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Envio<\/a> calculado na finalização da compra.",
       "in_stock": "Em estoque",
       "low_stock": "Estoque baixo",
       "out_of_stock": "Fora de estoque",
       "stock_left": "restante",
-      "out_of_stock_html": "<a href=\"#\"><strong>Clique em</strong></a> para ser notificado por e-mail quando {{ product }} ficar disponível.",
+      "out_of_stock_html": "<a href=\"#\"><strong>Clique em<\/strong><\/a> para ser notificado por e-mail quando {{ product }} ficar disponível.",
       "wrong_email": "Por favor, forneça um endereço de e-mail válido.",
       "out_of_stock_success": "Obrigado! Nós o notificaremos quando este produto estiver disponível!",
       "read_more_html": "Ler mais",
