--- a/locales/ja.json
+++ b/locales/ja.json
@@ -25,7 +25,7 @@
       "thanks": "ご参加いただきありがとうございます!"
     },
     "search": {
-      "no_results_html": "\"{{ terms }}\"に一致する結果は見つかりませんでした。スペルを確認するか、別の単語やフレーズを使用してください。",
+      "no_results_html": "\"{{ terms }}\"に一致する結果は見つかりませんでした。別の単語やフレーズを使用してください。",
       "results_for_html": "\"{{ terms }}\" の検索結果：",
       "title": "検索",
       "placeholder": "検索",
