--- a/locales/ja.json
+++ b/locales/ja.json
@@ -367,7 +367,7 @@
     "general": {
       "previous_product_html": "&larr; Previous product",
       "next_product_html": "Next product &rarr;",
-      "from_text": "From",
+      "from_text": "",
       "sale_price": "セール価格",
       "regular_price": "通常価格",
       "product_reviews": "レビュー",
