--- a/locales/ja.json
+++ b/locales/ja.json
@@ -37,7 +37,12 @@
       "collections": "コレクション",
       "results": "結果",
       "view_all": "すべての結果をみる",
-      "clear": "クリア"
+      "clear": "クリア",
+      "select_a_type": "選択する",
+      "result_type": "検索結果",
+      "result_type_text_product": "商品",
+      "result_type_text_page": "ページ",
+      "result_type_text_article": "記事"
     },
     "social": {
       "share_the_love": "シェアする"
