--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -37,7 +37,12 @@
       "collections": "Coleções",
       "results": "Resultados",
       "view_all": "Ver todos os resultados",
-      "clear": "Limpar"
+      "clear": "Limpar",
+      "select_a_type": "Select a type",
+      "result_type": "Result type",
+      "result_type_text_product": "Product",
+      "result_type_text_page": "Page",
+      "result_type_text_article": "Article"
     },
     "social": {
       "share_the_love": "Compartilhe o amor"
