--- a/locales/es.json
+++ b/locales/es.json
@@ -37,7 +37,12 @@
       "collections": "Colecciones",
       "results": "Resultados",
       "view_all": "Ver todos los resultados",
-      "clear": "Eliminar"
+      "clear": "Eliminar",
+      "select_a_type": "Select a type",
+      "result_type": "Result type",
+      "result_type_text_product": "Product",
+      "result_type_text_page": "Page",
+      "result_type_text_article": "Article"
     },
     "social": {
       "share_the_love": "Comparte el amor"
